# api

./: .env.example  .gitignore  AGENT_AUTOMATION.md  CLIENT_README.md  IMPLEMENTATION_NOTES.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_GUIDE.md  README.md  pyproject.toml
.github/: SECURITY.md  dependabot.yml  labels.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  wiki_update.yml
.github/workflows/: README.md  agent-dispatcher.yml  dependabot-auto-merge.yml  issue-automation.yml  project-automation.yml  sync-labels.yml  vulnerability-automation.yml  wiki-automation.yml
examples/: agent_automation_example.py  basic_usage.py  database_usage.py  requirements.txt
migrations/: 001_initial_schema.sql
scripts/: ingest_data.py  query_data.py
src/govinfo_client/: __init__.py  cli.py  client.py
src/govinfo_client/db/: __init__.py  models.py  session.py
src/govinfo_client/models/: __init__.py  base.py  collection.py  granule.py  package.py  published.py  search.py
src/govinfo_client/services/: __init__.py  ingestion.py
src/govinfo_client/utils/: __init__.py  date_helpers.py  validators.py
tests/: __init__.py
tests/integration/: test_api_client.py
tests/unit/: test_database.py  test_models.py
typescript/: README.md
